--- a/firstHTML.html
+++ b/firstHTML.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
     <html>
+        <style>
+            table, th, td {
+            border: 1px solid black;
+            border-collapse: collapse;
+          }
+        </style>
+
         <head>
-            <title>Page Title</title>
+            <title>my HTML</title>
             <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+            <base href="https://www.coopersSite/" target="_blank">
         </head>
         
         <body>
@@ -22,6 +30,26 @@
             <p title="I'm a tooltip">This is a paragraph.</p>
             <a href="cooperjbower@gmail.com">Send email</a>
             <img src="18.jpg">
+        </body>
+
+        <table>
+            <tr>
+                <td>element1</td>
+                <td>element2</td>
+            </tr>
+            <tr>
+                <td>element1</td>
+                <td>element2</td>
+            </tr>
+        </table>
+
+        <body>
+            <p>
+                this is an emoji
+            </p>
+            <p>
+                &#128151
+            </p>
         </body>
 
     </html>
