--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 
         <body>
-            <a download href="../html/videos/y2mateis-elvis-presley-unchained-melody-rapid-city-1977-wjbwyebha-s-1080p-1657476888669.m3u8">Presley</a>
-            <a download href="../html/videos/Spider0x0x0Man0x0x0No0x0x0Way0x0x0Home0x0x02021.m3u8">spiderMan</a>
+            <a href="../html/videos/y2mateis-elvis-presley-unchained-melody-rapid-city-1977-wjbwyebha-s-1080p-1657476888669.m3u8">Presley</a>
+            <a href="../html/videos/Spider0x0x0Man0x0x0No0x0x0Way0x0x0Home0x0x02021.m3u8">spiderMan</a>
             <h1>This is a Heading</h1>
             <p>This is a paragraph.</p>
 
