--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
         <body>
-            <a target="_new" href="../html/videos/Y2Mate.is - Elvis Presley - Unchained Melody - Rapid City - 1977-WJBwyeBHA-s-1080p-1657476888669.mp4">Presley</a>
+            <a download href="../html/videos/Y2Mate.is - Elvis Presley - Unchained Melody - Rapid City - 1977-WJBwyeBHA-s-1080p-1657476888669.mp4">Presley</a>
             <a target="_blank" href="../html/videos/Spider0x0x0Man0x0x0No0x0x0Way0x0x0Home0x0x02021.m3u8">spiderMan</a>
             <h1>This is a Heading</h1>
             <p>This is a paragraph.</p>
