night mode being added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
         <body>
             <h1>Cooper's website</h1>
+            <button class="nightMode" onclick="nightMode()">&#x1F319;</button>
         </body>
 
         <table id=pageLinks title="pages">
@@ -25,4 +26,7 @@
                 <td id="pageLinkCol">4</td>
             </tr>
         </table>
+
+        <p id="globalVariableHold" style="color:white">1</p>
+
     </html>
