--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
         </head>
 
         <body>
+            <video src="../html/videos/sword-art-online.mp4" autoplay loop></video>
             <h1>Cooper's website</h1>
             <button class="nightMode" onclick="nightMode()">&#x1F319;</button>
         </body>
 
         <table id=pageLinks title="pages">
             <tr id="pageLinkRows">
-                <td id="pageLinkCol"><a href="index.html" link="color:'white;'" >home</a></td>
+                <td id="pageLinkCol"><a style="color: white;" href="index.html" link="color:'white;'" >home</a></td>
             </tr>
             <tr id="pageLinkRows">
-                <td id="pageLinkCol"><a href="subPage1.html">math page</a></td>
+                <td id="pageLinkCol"><a style="color: white;" href="subPage1.html">math page</a></td>
             </tr>
             <tr id="pageLinkRows">
                 <td id="pageLinkCol">3</td>
@@ -26,7 +27,4 @@
                 <td id="pageLinkCol">4</td>
             </tr>
         </table>
-
-        <p id="globalVariableHold" style="color:white">1</p>
-
     </html>
