--- a/page2.html
+++ b/page2.html
@@ -8,8 +8,8 @@
         </head>
         
         <body>
+            <h1 class="header">Cooper's website</h1>
             <button class="nightMode" onclick="nightMode()">&#x1F319;</button>
-            <h1 style="display:inline-block; width: 100%; color: white; position: fixed;">Cooper's website</h1>
             
             <div class="parent">
                 <div class="linksTable">
@@ -93,21 +93,11 @@
                         </tr>
                     </table>
                 </div>
-                <div class="linksTable">
-                    <table id=pageLinks title="pages">
-                        <tr id="pageLinkRows">
-                            <td id="pageLinkCol"><a style="color: white;" href="index.html" link="color:'white;'" >home</a></td>
-                        </tr>
-                        <tr id="pageLinkRows">
-                            <td id="pageLinkCol"><a style="color: white;" href="page2.html">math page</a></td>
-                        </tr>
-                        <tr id="pageLinkRows">
-                            <td id="pageLinkCol"><a style="color: white;" href="page3.html">links</a></td>
-                        </tr>
-                        <tr id="pageLinkRows">
-                            <td id="pageLinkCol"><a style="color: white;" href="page4.html">4</a></td>
-                        </tr>
-                    </table>
+                <div class="pageDescription">
+                    <h2 class="desciptionHeader">This is a page discription</h2>
+                    <p style="color:white; font-family: saofont-regular;">
+                        this page is a test of the css flex-box system, next i will fix the home page. then work on page 3, that one will lilly be a youtube clone, using the css grid style.
+                    </p>
                 </div>
             </div>
         </body>
