--- a/index.html
+++ b/index.html
@@ -26,22 +26,22 @@
                 }, 4500);
             </script>
 
-            <h1 style="display:inline-block; width: 100%;" >Cooper's website</h1>
+            <h1 class="header" >Cooper's website</h1>
             <button class="nightMode" onclick="nightMode()">&#x1F319;</button>
 
             <div class="linksTable">
-                <table id=pageLinks title="pages">
-                    <tr id="pageLinkRows">
-                        <td id="pageLinkCol"><a style="color: white;" href="index.html" link="color:'white;'" >home</a></td>
+                <table class=pageLinks title="pages">
+                    <tr class="pageLinkRows">
+                        <td class="pageLinkCol"><a style="color: white;" href="index.html" link="color:'white;'" >home</a></td>
                     </tr>
-                    <tr id="pageLinkRows">
-                        <td id="pageLinkCol"><a style="color: white;" href="page2.html">math page</a></td>
+                    <tr class="pageLinkRows">
+                        <td class="pageLinkCol"><a style="color: white;" href="page2.html">math page</a></td>
                     </tr>
-                    <tr id="pageLinkRows">
-                        <td id="pageLinkCol"><a style="color: white;" href="page3.html">links</a></td>
+                    <tr class="pageLinkRows">
+                        <td class="pageLinkCol"><a style="color: white;" href="page3.html">links</a></td>
                     </tr>
-                    <tr id="pageLinkRows">
-                        <td id="pageLinkCol"><a style="color: white;" href="page4.html">4</a></td>
+                    <tr class="pageLinkRows">
+                        <td class="pageLinkCol"><a style="color: white;" href="page4.html">4</a></td>
                     </tr>
                 </table>
             </div>
