--- a/page2.html
+++ b/page2.html
@@ -14,17 +14,17 @@
             <div class="parent">
                 <div class="linksTable">
                     <table id=pageLinks title="pages">
-                        <tr id="pageLinkRows">
-                            <td id="pageLinkCol"><a style="color: white;" href="index.html" link="color:'white;'" >home</a></td>
+                        <tr class="pageLinkRows">
+                            <td class="pageLinkCol"><a style="color: white;" href="index.html" link="color:'white;'" >home</a></td>
                         </tr>
-                        <tr id="pageLinkRows">
-                            <td id="pageLinkCol"><a style="color: white;" href="page2.html">math page</a></td>
+                        <tr class="pageLinkRows">
+                            <td class="pageLinkCol"><a style="color: white;" href="page2.html">math page</a></td>
                         </tr>
-                        <tr id="pageLinkRows">
-                            <td id="pageLinkCol"><a style="color: white;" href="page3.html">links</a></td>
+                        <tr class="pageLinkRows">
+                            <td class="pageLinkCol"><a style="color: white;" href="page3.html">youtube Clone</a></td>
                         </tr>
-                        <tr id="pageLinkRows">
-                            <td id="pageLinkCol"><a style="color: white;" href="page4.html">4</a></td>
+                        <tr class="pageLinkRows">
+                            <td class="pageLinkCol"><a style="color: white;" href="page4.html">4</a></td>
                         </tr>
                     </table>
                 </div>
@@ -95,8 +95,10 @@
                 </div>
                 <div class="pageDescription">
                     <h2 class="desciptionHeader">This is a page discription</h2>
-                    <p style="color:white; font-family: saofont-regular;">
-                        this page is a test of the css flex-box system, next i will fix the home page. then work on page 3, that one will lilly be a youtube clone, using the css grid style.
+                    <p style="color:white; font-family: sao-regular;">
+                        This page is a test of the css flex-box system, 
+                        next I will fix the home page. Then work on page 3, that one will prolly be a youtube clone, 
+                        using the css grid style.
                     </p>
                 </div>
             </div>
