--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <td class="pageLinkCol"><a style="color: white;" href="page2.html">math page</a></td>
                     </tr>
                     <tr class="pageLinkRows">
-                        <td class="pageLinkCol"><a style="color: white;" href="page3.html">links</a></td>
+                        <td class="pageLinkCol"><a style="color: white;" href="page3.html">youtube Clone</a></td>
                     </tr>
                     <tr class="pageLinkRows">
                         <td class="pageLinkCol"><a style="color: white;" href="page4.html">4</a></td>
