--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                     <tr class="pageLinkRows">
                         <td class="pageLinkCol"><a style="color: white;" href="page3.html">youtube Clone</a></td>
                     </tr>
-                    <tr class="pageLinkRows">
-                        <td class="pageLinkCol"><a style="color: white;" href="page4.html">4</a></td>
+                    <tr id="pageLinkRows">
+                        <td id="pageLinkCol"><a style="color: white;" href="Cookie-Clicker-Source-Code-master/index.html">4</a></td>
                     </tr>
                 </table>
             </div>
