--- a/page2.html
+++ b/page2.html
@@ -13,7 +13,7 @@
             
             <div class="parent">
                 <div class="linksTable">
-                    <table id=pageLinks title="pages">
+                    <table class=pageLinks title="pages">
                         <tr class="pageLinkRows">
                             <td class="pageLinkCol"><a style="color: white;" href="index.html" link="color:'white;'" >home</a></td>
                         </tr>
@@ -25,6 +25,9 @@
                         </tr>
                         <tr class="pageLinkRows">
                             <td class="pageLinkCol"><a style="color: white;" href="page4.html">4</a></td>
+                        </tr>
+                        <tr class="pageLinkRows">
+                            <td class="pageLinkCol"><a style="color: white;" href="Cookie-Clicker-Source-Code-master/index.html">cookieClicker</a></td>
                         </tr>
                     </table>
                 </div>
