--- a/page4.html
+++ b/page4.html
@@ -11,18 +11,21 @@
             <button class="nightMode" onclick="nightMode()">&#x1F319;</button>
 
             <div class="linksTable">
-                <table id=pageLinks title="pages">
-                    <tr id="pageLinkRows">
-                        <td id="pageLinkCol"><a style="color: white;" href="index.html" link="color:'white;'" >home</a></td>
+                <table class=pageLinks title="pages">
+                    <tr class="pageLinkRows">
+                        <td class="pageLinkCol"><a style="color: white;" href="index.html" link="color:'white;'" >home</a></td>
                     </tr>
-                    <tr id="pageLinkRows">
-                        <td id="pageLinkCol"><a style="color: white;" href="page2.html">math page</a></td>
+                    <tr class="pageLinkRows">
+                        <td class="pageLinkCol"><a style="color: white;" href="page2.html">math page</a></td>
                     </tr>
-                    <tr id="pageLinkRows">
-                        <td id="pageLinkCol"><a style="color: white;" href="page3.html">3</a></td>
+                    <tr class="pageLinkRows">
+                        <td class="pageLinkCol"><a style="color: white;" href="page3.html">youtube Clone</a></td>
                     </tr>
-                    <tr id="pageLinkRows">
-                        <td id="pageLinkCol"><a style="color: white;" href="page4.html">4</a></td>
+                    <tr class="pageLinkRows">
+                        <td class="pageLinkCol"><a style="color: white;" href="page4.html">4</a></td>
+                    </tr>
+                    <tr class="pageLinkRows">
+                        <td class="pageLinkCol"><a style="color: white;" href="Cookie-Clicker-Source-Code-master/index.html">cookieClicker</a></td>
                     </tr>
                 </table>
             </div>
