--- a/Cookie-Clicker-Source-Code-master/index.html
+++ b/Cookie-Clicker-Source-Code-master/index.html
@@ -42,8 +42,9 @@ Feel free to alter this code to your liking, but please do not re-host it, do no
 
 	<div id="topBar">
 		<div><b>Cookie Clicker</b>&trade; &copy; <a href="../index.html" id="topbarOrteil">Home Page</a>, 2019 - <a href="http://dashnet.org" target="_blank" id="topbarDashnet">DashNet</a></div>
-		<div><a href="http://twitter.com/orteil42" target="_blank" id="topbarTwitter">twitter</a></div>
-		<div><a href="http://orteil42.tumblr.com" target="_blank" id="topbarTumblr">tumblr</a></div>
+		<div><a href="../page2.html" target="_blank" id="topbarTwitter">page 2</a></div>
+		<div><a href="../page3.html" target="_blank" id="topbarTumblr">youtube clone</a></div>
+		<div><a href="../page.html" target="_blank" id="topbarPage4">page 4</a></div>
 		<!--<div><a href="http://forum.dashnet.org" target="_blank">Official forum</a></div>-->
 		<div style="position:relative;"><div style="width:22px;height:32px;background:url(img/discord.png);position:absolute;left:0px;top:0px;pointer-events:none;"></div><a href="https://discordapp.com/invite/cookie" target="_blank" style="padding-left:16px;" id="topbarDiscord">Discord</a></div>
 		<div style="position:relative;"><div style="width:25px;height:32px;background:url(img/weeHoodie.png);position:absolute;left:-2px;top:0px;pointer-events:none;"></div><a class="blueLink" href="http://www.redbubble.com/people/dashnet" target="_blank" style="padding-left:12px;" id="topbarMerch">Merch!</a></div>
