--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
             <div class="linksTable">
                 <table class=pageLinks title="pages">
                     <tr class="pageLinkRows">
-                        <td class="pageLinkCol"><a style="color: white;" href="index.html" link="color:'white;'" >home</a></td>
+                        <td class="pageLinkCol"><a class="link" style="color: white;" href="index.html" link="color:'white;'" >home</a></td>
                     </tr>
                     <tr class="pageLinkRows">
-                        <td class="pageLinkCol"><a style="color: white;" href="page2.html">math page</a></td>
+                        <td class="pageLinkCol"><a class="link" style="color: white;" href="page2.html">math page</a></td>
                     </tr>
                     <tr class="pageLinkRows">
-                        <td class="pageLinkCol"><a style="color: white;" href="page3.html">youtube Clone</a></td>
+                        <td class="pageLinkCol"><a class="link" style="color: white;" href="page3.html">youtube Clone</a></td>
                     </tr>
                     <tr class="pageLinkRows">
-                        <td class="pageLinkCol"><a style="color: white;" href="page4.html">4</a></td>
+                        <td class="pageLinkCol"><a class="link" style="color: white;" href="page4.html">4</a></td>
                     </tr>
                     <tr class="pageLinkRows">
-                        <td class="pageLinkCol"><a style="color: white;" href="Cookie-Clicker-Source-Code-master/index.html">cookieClicker</a></td>
+                        <td class="pageLinkCol"><a class="link" style="color: white;" href="Cookie-Clicker-Source-Code-master/index.html">cookieClicker</a></td>
                     </tr>
                 </table>
             </div>
