fixed right icons

--- a/page3.html
+++ b/page3.html
@@ -24,10 +24,10 @@
                 </button>
             </div>
             <div class="rightSection">
-                <img src="icons/upload.svg">
-                <img src="icons/youtube-apps.svg">
-                <img src="icons/notifications.svg">
-                <img src="icons/my-channel.jpeg">
+                <img class="upload" src="icons/upload.svg">
+                <img class="apps" src="icons/youtube-apps.svg">
+                <img class="notifications" src="icons/notifications.svg">
+                <img class="myChannel" src="icons/my-channel.jpeg">
             </div>
             
         </div>
