--- a/Cookie-Clicker-Source-Code-master/index.html
+++ b/Cookie-Clicker-Source-Code-master/index.html
@@ -42,7 +42,7 @@ Feel free to alter this code to your liking, but please do not re-host it, do no
 <div id="wrapper">
 
 	<div id="topBar">
-		<div><b>Cookie Clicker</b>&trade; &copy; <a href="../index.html" id="topbarOrteil">Home Page</a>, 2019 - <a href="http://dashnet.org" target="_blank" id="topbarDashnet">DashNet</a></div>
+		<div><b>Cookie Clicker</b>&trade; &copy; <a target="_blank" href="../index.html" id="topbarOrteil">Home Page</a>, 2019 - <a href="http://dashnet.org" target="_blank" id="topbarDashnet">DashNet</a></div>
 		<div><a href="../page2.html" target="_blank" id="topbarTwitter">page 2</a></div>
 		<div><a href="../page3.html" target="_blank" id="topbarTumblr">youtube clone</a></div>
 		<div><a href="../page.html" target="_blank" id="topbarPage4">page 4</a></div>
