finished the youtube clone

--- a/page3.html
+++ b/page3.html
@@ -12,22 +12,35 @@
         <div class="header">
             <div class="leftSection">
                 <img class="hamburgerMenu" src="icons/hamburger-menu.svg">
-                <img class="logo" src="icons/youtube-logo.svg">
+                <a href="index.html"><img class="logo" src="icons/youtube-logo.svg"> </a>
             </div>
             <div class="middleSection">
                 <input class="seachBar" type="textbox" placeholder="Search">
                 <button class="search">
                     <img class="searchIcon" src="icons/search.svg">
+                    <p class="tooltip">Search</p>
                 </button>
                 <button class="voice">
                     <img class="voieIcon" src="icons/voice-search-icon.svg">
+                    <p class="tooltip">Search with your voice</p>
                 </button>
             </div>
             <div class="rightSection">
-                <img class="upload" src="icons/upload.svg">
-                <img class="apps" src="icons/youtube-apps.svg">
-                <img class="notifications" src="icons/notifications.svg">
-                <img class="myChannel" src="icons/my-channel.jpeg">
+                <div class="uploadIcons">
+                    <img class="upload" src="icons/upload.svg">
+                    <p class="tooltip">Create</p>
+                </div>
+                <div class="appsIcon">
+                    <img class="apps" src="icons/youtube-apps.svg">
+                    <p class="tooltip">YouTube apps</p>
+                </div>
+                <div class="notIcons">
+                    <img class="notifications" src="icons/notifications.svg">
+                    <p class="tooltip">Notifications</p>
+                </div>
+                <div class="channelIcon">
+                    <img class="myChannel" src="icons/my-channel.jpeg">
+                </div>
             </div>
             
         </div>
@@ -35,7 +48,32 @@
         
 
         <div class="pageRoot">
-            <div class="sidebar"></div>
+            <div class="sidebar">
+                <div class="sideButton">
+                    <img class="sideImage" src="icons/home.svg">
+                    <p class="sideText">Home</p>
+                </div>
+                <div class="sideButton">
+                    <img class="sideImage" src="icons/explore.svg">
+                    <p class="sideText">Explore</p>
+                </div>
+                <div class="sideButton">
+                    <img class="sideImage" src="icons/subscriptions.svg">
+                    <p class="sideText">Subscriptions</p>
+                </div>
+                <div class="sideButton">
+                    <img class="sideImage" src="icons/originals.svg">
+                    <p class="sideText">Originals</p>
+                </div>
+                <div class="sideButton">
+                    <img class="sideImage" src="icons/youtube-music.svg">
+                    <p class="sideText">YouTube Music</p>
+                </div>
+                <div class="sideButton">
+                    <img class="sideImage" src="icons/library.svg">
+                    <p class="sideText">Library</p>
+                </div>
+            </div>
             <div class="root">
                 <div class="video-preview">
                     <div><img class="thumbnail" src="thumbnails/thumbnail-1.webp"></div>
