--- a/page4.html
+++ b/page4.html
@@ -3,7 +3,7 @@
         <head>
             <title>my HTML</title>
             <link rel="icon" type="image/x-icon" href="favicon.ico">
-            <link rel="stylesheet" href="page formating.css">
+            <link rel="stylesheet" href="page4Styles.css">
             <script src="htmljavaScript.js"></script>
         </head>
         
