--- a/page4.html
+++ b/page4.html
@@ -10,30 +10,18 @@
         <body>
             <button class="nightMode" onclick="nightMode()">&#x1F319;</button>
 
-            <div class="linksTable">
-                <table class=pageLinks title="pages">
-                    <tr class="pageLinkRows">
-                        <td class="pageLinkCol"><a class="link" style="color: white;" href="index.html" link="color:'white;'" >home</a></td>
-                    </tr>
-                    <tr class="pageLinkRows">
-                        <td class="pageLinkCol"><a class="link" style="color: white;" href="page2.html">math page</a></td>
-                    </tr>
-                    <tr class="pageLinkRows">
-                        <td class="pageLinkCol"><a class="link" style="color: white;" href="page3.html">youtube Clone</a></td>
-                    </tr>
-                    <tr class="pageLinkRows">
-                        <td class="pageLinkCol"><a class="link" style="color: white;" href="page4.html">4</a></td>
-                    </tr>
-                    <tr class="pageLinkRows">
-                        <td class="pageLinkCol"><a class="link" style="color: white;" href="Cookie-Clicker-Source-Code-master/index.html">cookieClicker</a></td>
-                    </tr>
+            <div class="header">
+                    <a class="link" href="index.html">home</a>
+                    <a class="link" href="page2.html">math page</a>
+                    <a class="link" href="page3.html">youtube Clone</a>
+                    <a class="link" href="page4.html">4</a>
+                    <a class="link" href="Cookie-Clicker-Source-Code-master/index.html">cookieClicker</a>
                 </table>
             </div>
-            <div>
-                <p>input a number to square</p>
-                <input type="number" id="inputField">
-                <button class="mathSubmit" onclick="OnClick(document.getElementById('inputField').value)">click to submnit number</button>
-                <p id="demo"></p>
+            <div class="content">
+                <div>
+                    <audio controls download src="audio/Beck - Loser (Official Music Video).mp3"></audio>
+                </div>
             </div>
         </body>
     </html>
