--- a/page4.html
+++ b/page4.html
@@ -11,17 +11,42 @@
             <button class="nightMode" onclick="nightMode()">&#x1F319;</button>
 
             <div class="header">
-                    <a class="link" href="index.html">home</a>
-                    <a class="link" href="page2.html">math page</a>
-                    <a class="link" href="page3.html">youtube Clone</a>
-                    <a class="link" href="page4.html">4</a>
-                    <a class="link" href="Cookie-Clicker-Source-Code-master/index.html">cookieClicker</a>
-                </table>
+                <div class="leftSection">
+                    <img class="hamburgerMenu" src="icons/hamburger-menu.svg">
+                    <a href="index.html"><img class="logo" src="icons/youtube-logo.png"> </a>
+                </div>
+                <div class="middleSection">
+                    <input class="seachBar" type="textbox" placeholder="Search">
+                    <button class="search">
+                        <img class="searchIcon" src="icons/search.svg">
+                        <p class="tooltip">Search</p>
+                    </button>
+                    <button class="voice">
+                        <img class="voieIcon" src="icons/voice-search-icon.svg">
+                        <p class="tooltip">Search with your voice</p>
+                    </button>
+                </div>
+                <div class="rightSection">
+                    <div class="uploadIcons">
+                        <img class="upload" src="icons/upload.svg">
+                        <p class="tooltip">Create</p>
+                    </div>
+                    <div class="appsIcon">
+                        <img class="apps" src="icons/youtube-apps.svg">
+                        <p class="tooltip">YouTube apps</p>
+                    </div>
+                    <div class="notIcons">
+                        <img class="notifications" src="icons/notifications.svg">
+                        <p class="tooltip">Notifications</p>
+                    </div>
+                    <div class="channelIcon">
+                        <img class="myChannel" src="icons/channels4_profile.jpg">
+                    </div>
+                </div>
             </div>
             <div class="content">
-                <div>
-                    <audio controls download src="audio/Beck - Loser (Official Music Video).mp3"></audio>
-                </div>
+                <div class="video"></div>
+                <div class="others">adfasdfadfadfas</div>
             </div>
         </body>
     </html>
