--- a/page4.html
+++ b/page4.html
@@ -5,6 +5,15 @@
             <link rel="icon" type="image/x-icon" href="favicon.ico">
             <link rel="stylesheet" href="page4Styles.css">
             <script src="htmljavaScript.js"></script>
+
+            <style>
+                .test:hover::after{
+                    content: "*";
+
+                    color: rgb(179, 255, 0);
+
+                }
+            </style>
         </head>
         
         <body>
@@ -13,5 +22,33 @@
             <h1>need to learn:</h1>
             <p>list better</p>
             <p>articles, details, summary</p>
+
+            <ul> stuff im learning:
+                <ol>
+                    <li>
+                        list
+                    </li>
+                    <ul>
+                        <li>there are three types</li>
+                        <ul>
+                            <li>unordered, this (ul)</li>
+                            <li>ordered (ol)</li>
+                            <li>decription list (dl)</li>
+                        </ul>
+                        <li> unordered and ordered list use the li tag</li>
+                        <li>the description list uses dt for title, then dd for the description</li>
+                    </ul>
+
+                    <li>article tag</li>
+                    <ul>
+
+                    </ul>
+                </ol>
+                </ul>
+            </ul>
+
+            <div>
+                <p class="test">example</p>
+            </div>
         </body>
     </html>
