fixed page 1 and 2

--- a/page2.html
+++ b/page2.html
@@ -8,30 +8,21 @@
         </head>
         
         <body>
-            <h1 class="header">Cooper's website</h1>
-            <button class="nightMode" onclick="nightMode()">&#x1F319;</button>
-            
-            <div class="parent">
+            <div class="main">
+                <button class="nightMode" onclick="nightMode()">&#x1F319;</button>
+                <h1 class="header" >Cooper's website</h1>
+
                 <div class="linksTable">
-                    <table class=pageLinks title="pages">
-                        <tr class="pageLinkRows">
-                            <td class="pageLinkCol"><a class="link" style="color: white;" href="index.html" link="color:'white;'" >home</a></td>
-                        </tr>
-                        <tr class="pageLinkRows">
-                            <td class="pageLinkCol"><a class="link" style="color: white;" href="page2.html">math page</a></td>
-                        </tr>
-                        <tr class="pageLinkRows">
-                            <td class="pageLinkCol"><a class="link" style="color: white;" href="page3.html">youtube Clone</a></td>
-                        </tr>
-                        <tr class="pageLinkRows">
-                            <td class="pageLinkCol"><a class="link" style="color: white;" href="page4.html">4</a></td>
-                        </tr>
-                        <tr class="pageLinkRows">
-                            <td class="pageLinkCol"><a class="link" style="color: white;" href="Cookie-Clicker-Source-Code-master/index.html">cookieClicker</a></td>
-                        </tr>
-                    </table>
+                    <div>
+                        <a class="link" style="color: white;" href="index.html" link="color:'white;'" ><div class="pageLinkCol">home</div></a>
+                        <a class="link" style="color: white;" href="page2.html" link="color:'white;'" ><div class="pageLinkCol">page2</div></a>
+                        <a class="link" style="color: white;" href="page3.html" link="color:'white;'" ><div class="pageLinkCol">youtube clone</div></a>
+                        <a class="link" style="color: white;" href="Cookie-Clicker-Source-Code-master/index.html" link="color:'white;'" ><div class="pageLinkCol">cookie clicker</div></a>
+                        <a class="link" style="color: white;" href="page4.html" link="color:'white;'" ><div class="pageLinkCol">page4</div></a>
+                    </div>
                 </div>
-                <div class="content">
+
+                <div class="randomParagraph3">
                     <table class="calc">
                         <tr>
                             <td>
@@ -96,13 +87,16 @@
                         </tr>
                     </table>
                 </div>
-                <div class="pageDescription">
-                    <h2 class="desciptionHeader">This is a page discription</h2>
-                    <p style="color:white; font-family: sao-regular;">
-                        This page is a test of the css flex-box system, 
-                        next I will fix the home page. Then work on page 3, that one will prolly be a youtube clone, 
-                        using the css grid style.
-                    </p>
+
+                <div class="randomParagraph2">
+                    <div class="gibberish2">
+                        <h2 style="color:white;">
+                            same thing but in shakspere
+                        </h2>
+                        <p>
+                            This page is the second web page I made, it was for testing flex-box, by this point html and css is easy to me. this is now just here to be here
+                        </p>
+                    </div>
                 </div>
             </div>
         </body>
