made scroll bar

--- a/index.html
+++ b/index.html
@@ -34,11 +34,39 @@
 
                 <div class="linksTable">
                     <div>
+                        <h2 style="color:white; text-align: center;">
+                            scroll test
+                        </h2>
                         <a class="link" style="color: white;" href="index.html" link="color:'white;'" ><div class="pageLinkCol">home</div></a>
                         <a class="link" style="color: white;" href="page2.html" link="color:'white;'" ><div class="pageLinkCol">page2</div></a>
                         <a class="link" style="color: white;" href="page3.html" link="color:'white;'" ><div class="pageLinkCol">youtube clone</div></a>
                         <a class="link" style="color: white;" href="Cookie-Clicker-Source-Code-master/index.html" link="color:'white;'" ><div class="pageLinkCol">cookie clicker</div></a>
                         <a class="link" style="color: white;" href="page4.html" link="color:'white;'" ><div class="pageLinkCol">page4</div></a>
+                        <a class="link" style="color: white;" href="index.html" link="color:'white;'" ><div class="pageLinkCol">home</div></a>
+                        <a class="link" style="color: white;" href="page2.html" link="color:'white;'" ><div class="pageLinkCol">page2</div></a>
+                        <a class="link" style="color: white;" href="page3.html" link="color:'white;'" ><div class="pageLinkCol">youtube clone</div></a>
+                        <a class="link" style="color: white;" href="Cookie-Clicker-Source-Code-master/index.html" link="color:'white;'" ><div class="pageLinkCol">cookie clicker</div></a>
+                        <a class="link" style="color: white;" href="page4.html" link="color:'white;'" ><div class="pageLinkCol">page4</div></a>
+                        <a class="link" style="color: white;" href="index.html" link="color:'white;'" ><div class="pageLinkCol">home</div></a>
+                        <a class="link" style="color: white;" href="page2.html" link="color:'white;'" ><div class="pageLinkCol">page2</div></a>
+                        <a class="link" style="color: white;" href="page3.html" link="color:'white;'" ><div class="pageLinkCol">youtube clone</div></a>
+                        <a class="link" style="color: white;" href="Cookie-Clicker-Source-Code-master/index.html" link="color:'white;'" ><div class="pageLinkCol">cookie clicker</div></a>
+                        <a class="link" style="color: white;" href="page4.html" link="color:'white;'" ><div class="pageLinkCol">page4</div></a>
+                        <a class="link" style="color: white;" href="index.html" link="color:'white;'" ><div class="pageLinkCol">home</div></a>
+                        <a class="link" style="color: white;" href="page2.html" link="color:'white;'" ><div class="pageLinkCol">page2</div></a>
+                        <a class="link" style="color: white;" href="page3.html" link="color:'white;'" ><div class="pageLinkCol">youtube clone</div></a>
+                        <a class="link" style="color: white;" href="Cookie-Clicker-Source-Code-master/index.html" link="color:'white;'" ><div class="pageLinkCol">cookie clicker</div></a>
+                        <a class="link" style="color: white;" href="page4.html" link="color:'white;'" ><div class="pageLinkCol">page4</div></a>
+                        <a class="link" style="color: white;" href="index.html" link="color:'white;'" ><div class="pageLinkCol">home</div></a>
+                        <a class="link" style="color: white;" href="page2.html" link="color:'white;'" ><div class="pageLinkCol">page2</div></a>
+                        <a class="link" style="color: white;" href="page3.html" link="color:'white;'" ><div class="pageLinkCol">youtube clone</div></a>
+                        <a class="link" style="color: white;" href="Cookie-Clicker-Source-Code-master/index.html" link="color:'white;'" ><div class="pageLinkCol">cookie clicker</div></a>
+                        <a class="link" style="color: white;" href="page4.html" link="color:'white;'" ><div class="pageLinkCol">page4</div></a>
+                        <a class="link" style="color: white;" href="index.html" link="color:'white;'" ><div class="pageLinkCol">home</div></a>
+                        <a class="link" style="color: white;" href="page2.html" link="color:'white;'" ><div class="pageLinkCol">page2</div></a>
+                        <a class="link" style="color: white;" href="page3.html" link="color:'white;'" ><div class="pageLinkCol">youtube clone</div></a>
+                        <a class="link" style="color: white;" href="https://replit.com/@forsee456789/sans-fight-battle-sim" link="color:'white;'" ><div class="pageLinkCol">page4</div></a>
+                        <a class="link" style="color: white;" href="Cookie-Clicker-Source-Code-master/index.html" link="color:'white;'" ><div class="pageLinkCol">cookie clicker</div></a>
                     </div>
                 </div>
 
